--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
         <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
       </details>
-  </footer>
+    </footer>
+  </div>
 </html>
