Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
   <body>
 
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
-    <div class+"wrapper">
+    <header>
       <h1>Exceptional Header</h1>
       <h2>Really, it is a great header</h2>
-    </div>
+    </header>
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
-    <header>
-      <span>
+    <nav>
         <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
-      </span>
-  </header>
+    </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
     <main>
@@ -98,5 +96,4 @@
         <p>All Rights Reserved.</p>
       </details>
     </footer>
-  </div>
 </html>
